test/boolLiteral2.slq

def main(){
	[x,y]:=[H(1),H(2)]; /// error
	return (x,y); /// error
}
